// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Room It correctly renders a room component 1`] = `
<div>
  <div
    class="row room-div"
  >
    <div
      class="col-md-8 room-image"
    >
      <img
        alt="room"
        class="room-image"
      />
    </div>
    <div
      class="col-md-4 room-details"
    >
      <h3
        class="room-name"
      />
      <div
        class="room-data"
      >
        <p
          class="room-description"
        >
          Room description:
          <span />
        </p>
        <p
          class="room-size"
        >
          Room size:
          <span />
        </p>
        <p
          class="room-view"
        >
          Room view:
          <span />
        </p>
        <p
          class="room-bedding"
        >
          Room bedding:
          <span />
        </p>
        <div
          class="reserve-btn"
        >
          <button
            class="fw-bold"
            type="button"
          >
            Reserve
            <span>
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M210.7 147.6c7.5-7.5 19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81.1-81.9-81.1c-7.6-7.4-7.6-19.6 0-27.2z"
                />
                <path
                  d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm32 0c0-47 18.3-91.2 51.6-124.4C164.8 98.3 209 80 256 80s91.2 18.3 124.4 51.6C413.7 164.8 432 209 432 256s-18.3 91.2-51.6 124.4C347.2 413.7 303 432 256 432s-91.2-18.3-124.4-51.6C98.3 347.2 80 303 80 256z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="back-arrow fixed-bottom"
    >
      <button
        class="btn"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`A Room It renders the Room correctly 1`] = `
<div
  className="row room-div"
>
  <div
    className="col-md-8 room-image"
  >
    <img
      alt="room"
      className="room-image"
    />
  </div>
  <div
    className="col-md-4 room-details"
  >
    <h3
      className="room-name"
    />
    <div
      className="room-data"
    >
      <p
        className="room-description"
      >
        Room description:
        <span />
      </p>
      <p
        className="room-size"
      >
        Room size:
        <span />
      </p>
      <p
        className="room-view"
      >
        Room view:
        <span />
      </p>
      <p
        className="room-bedding"
      >
        Room bedding:
        <span />
      </p>
      <div
        className="reserve-btn"
      >
        <button
          className="fw-bold"
          onClick={[Function]}
          type="button"
        >
          Reserve
          <span>
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M210.7 147.6c7.5-7.5 19.8-7.5 27.3 0l95.4 95.7c7.3 7.3 7.5 19.1.6 26.6l-94 94.3c-3.8 3.8-8.7 5.7-13.7 5.7-4.9 0-9.9-1.9-13.6-5.6-7.5-7.5-7.6-19.7 0-27.3l79.9-81.1-81.9-81.1c-7.6-7.4-7.6-19.6 0-27.2z"
              />
              <path
                d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm32 0c0-47 18.3-91.2 51.6-124.4C164.8 98.3 209 80 256 80s91.2 18.3 124.4 51.6C413.7 164.8 432 209 432 256s-18.3 91.2-51.6 124.4C347.2 413.7 303 432 256 432s-91.2-18.3-124.4-51.6C98.3 347.2 80 303 80 256z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="back-arrow fixed-bottom"
  >
    <button
      className="btn"
      onClick={[Function]}
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.464 2.114a.998.998 0 0 0-1.033.063l-13 9a1.003 1.003 0 0 0 0 1.645l13 9A1 1 0 0 0 19 21V3a1 1 0 0 0-.536-.886zM17 19.091 6.757 12 17 4.909v14.182z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Sidebar Navigation It correctly renders a Nav component 1`] = `
<div>
  <nav
    class="collapse d-lg-block sidebar"
    id="sidebarMenu"
  >
    <div
      class="position-sticky"
    >
      <div
        class="list-group list-group-flush mx-3 mt-4"
      >
        <a
          aria-current="true"
          class="list-group-item list-group-item-action py-2 ripple active"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
        <a
          class="list-group-item list-group-item-action py-2 ripple "
          href="/room-new"
        >
          <span>
            Add Room
          </span>
        </a>
        <a
          class="list-group-item list-group-item-action py-2 ripple"
          href="/room-delete"
        >
          <span>
            Delete Room
          </span>
        </a>
        <a
          class="list-group-item list-group-item-action py-2 ripple"
          href="/user"
        >
          <span>
            Add User
          </span>
        </a>
        <a
          class="list-group-item list-group-item-action py-2 ripple"
          href="/reservations-new"
        >
          <span>
            Make Reservations
          </span>
        </a>
      </div>
    </div>
    <div
      class="card-footer bg-transparent border-0 fixed-bottom w-25"
    >
      <svg
        class="fs-1 opacity-50 mb-3 mb-md-4 border border-2 border-dark rounded-circle p-2 mx-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.94474914,22 L9.94474914,13.1657526 L7,13.1657526 L7,9.48481614 L9.94474914,9.48481614 L9.94474914,6.54006699 C9.94474914,3.49740494 11.8713513,2 14.5856738,2 C15.8857805,2 17.0033128,2.09717672 17.3287076,2.13987558 L17.3287076,5.32020466 L15.4462767,5.32094085 C13.9702212,5.32094085 13.6256856,6.02252733 13.6256856,7.05171716 L13.6256856,9.48481614 L17.306622,9.48481614 L16.5704347,13.1657526 L13.6256856,13.1657526 L13.6845806,22"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="fs-1 opacity-50 mb-3 mb-md-4 border border-2 border-dark rounded-circle p-2 mx-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
        />
      </svg>
      <svg
        class="fs-1 opacity-50 mb-3 mb-md-4 border border-2 border-dark rounded-circle p-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM349.3 793.7H230.6V411.9h118.7v381.8zm-59.3-434a68.8 68.8 0 1 1 68.8-68.8c-.1 38-30.9 68.8-68.8 68.8zm503.7 434H675.1V608c0-44.3-.8-101.2-61.7-101.2-61.7 0-71.2 48.2-71.2 98v188.9H423.7V411.9h113.8v52.2h1.6c15.8-30 54.5-61.7 112.3-61.7 120.2 0 142.3 79.1 142.3 181.9v209.4z"
        />
      </svg>
    </div>
  </nav>
  <nav
    class="navbar navbar-expand-lg fixed-top"
    id="main-navbar"
  >
    <div
      class="container-fluid"
    >
      <button
        aria-controls="sidebarMenu"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#sidebarMenu"
        data-bs-toggle="collapse"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          />
        </svg>
      </button>
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt="Logo"
          loading="lazy"
          src="https://res.cloudinary.com/wonderwoman/image/upload/v1665273260/3D_gold_crown_logo_-_Made_with_PosterMyWall_n1vleo.png"
        />
      </a>
    </div>
  </nav>
</div>
`;
